Fix #45: Full track title (if too long to be displayed) and description are displayed in popovers.  A simple mouseover on the track name will show this one.

--- a/style/style.css
+++ b/style/style.css
@@ -6078,7 +6078,8 @@ div.timeline-groups-text.selected div.timeline-group:hover {
 div.timeline-groups-text i.delete {
   z-index: 4;
   float: left;
-  margin-top: 5.5px;
+  margin-top: 5px;
+  margin-right: 4px;
 }
 div.timeline-groups-text i.delete:hover {
   cursor: pointer;
