--- a/style/timeline/timeline-custom.less
+++ b/style/timeline/timeline-custom.less
@@ -59,7 +59,8 @@ div.timeline-groups-text{
         
         z-index: 4;
         float: left;
-        margin-top: 5.5px;
+        margin-top: 5px;
+        margin-right: 4px;
         
         &:hover {
             cursor: pointer;
